manifests/sc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange-sc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-sc
  template:
    metadata:
      labels:
        app: my-app-sc
    spec:
      containers:
      - name: busybox-writer
        image: busybox
        command: ["/bin/sh", "-c"]
        args: ["while true; do echo $(date) >> /temp/output.txt; sleep 5; done"]
        volumeMounts:
        - name: volume-shared
          mountPath: /temp
      - name: multitool-reader
        image: busybox
        command: ["/bin/sh", "-c"]
        args: ["tail -f /temp/output.txt"]
        volumeMounts:
        - name: volume-shared
          mountPath: /temp
      volumes:
      - name: volume-shared
        persistentVolumeClaim:
          claimName: netology-sc-pvc
