manifests/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
      nodePort: 30080
    - name: multitool-http
      protocol: TCP
      port: 8080
      nodePort: 30880
  type: NodePort
