manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  selector:
    app: web-app
  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
